# ppe-miniaudio

./: .gitignore  README.md  build.zig
.github/workflows/: build.yml
bindings/: ma_wrap.c  ma_wrap.h
csharp/Miniaudio/: Enums.cs  Miniaudio.csproj  MiniaudioEngine.cs  MiniaudioException.cs  NativeLibraryResolver.cs  NativeMethods.g.cs  Sound.cs
csharp/Miniaudio.SmokeTest/: Miniaudio.SmokeTest.csproj  Program.cs
csharp/codegen/: Cargo.toml  build.rs
csharp/codegen/src/: lib.rs  ma_wrap_ffi.rs
lib/win-x64/: miniaudio.lib
web/: build-wasm.ps1  build-wasm.sh  package.json  tsconfig.json
web/src/: ma.ts
